[metadata]
name = RII
version = 0.0.1

[options]
packages = find:
install_requires =
    pandas>=1.0.0
    click
    altair
    altair_saver
    tqdm
    pyyaml
    pdpipe

[options.entry_points]
console_scripts = 
    extract_metadata = rii.extract_metadata:extract_metadata
    plot_variant_region_proportion = rii.plots.plot_variant_region_proportion:plot_variant_region_proportion
    extract_registry = rii.registry.cli:extract
