[metadata]
name = RII
version = 0.0.1

[options]
packages = find:
install_requires =
    pandas>=1.0.0
    click
    altair
    altair_saver
    tqdm
    pyyaml
    pdpipe
    requests
    biopython
    pydantic

[options.entry_points]
console_scripts = 
    extract_metadata = rii.extract_metadata:extract_metadata
    plot_variant_region_proportion = rii.plots.plot_variant_region_proportion:plot_variant_region_proportion
    plot_spike_substitutions = rii.plots.plot_spike_substitutions:plot_spike_substitutions
    extract_registry = rii.registry.cli:extract
